Fri Sep  3 12:34:41 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* ace/OS_NS_sys_mman.inl:

	  Removed redundant conditional used to disable madvise for WIN32
	  systems.  Instead use ACE_LACKS_MADVISE feature test macro.

	* ace/config-win32-common.h:

	  Added ACE_LACKS_MADVISE definition.

Fri Sep  3 15:10:22 2004  Steve Huston  <shuston@riverace.com>

	* ace/config-aix-5.x.h: Add ACE_HAS_TIMEZONE.

	* ace/OS_NS_time.h: Include "ace/OS_NS_errno.h" - ACE_NOTSUP_RETURN
	  sets errno.

Fri Sep  3 21:36:51 2004  Olli Savia  <ops@iki.fi>

        * apps/drwho/File_Manager.cpp:
          Use ACE_HAS_EXPLICIT_STATIC_TEMPLATE_MEMBER_INSTANTIATION
          to check if explicit template instantiation is needed.
          Thanks to Johnny Willemsen for informing me about this
          macro.

Fri Sep  3 20:02:20 2004  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_unistd.inl:
          There is no need to check missing prototype since this has
          already been taken care by os_unistd.h.

        * ace/os_include/arpa/os_inet.h:
        * ace/os_include/os_stdlib.h:
        * ace/os_include/os_strings.h:
        * ace/os_include/os_unistd.h:
          To make things easier to maintain use new ACE_LACKS_xxx_PROTOTYPE
          macros to check whether we need to declare missing function
          prototype.

        * ace/README:
          Added new ACE_LACKS_xxx_PROTOTYPE macros

        * ace/config-lynxos.h:
          Modified to follow changes above.

Fri Sep  3 19:35:48 2004  Olli Savia  <ops@iki.fi>

        * ace/Log_Msg.h:
          Removed broken macro redefinition code to prevent people
          thinking that it actually works. Cleaned up #undef's.

Fri Sep  3 19:30:18 2004  Olli Savia  <ops@iki.fi>

        * ace/Global_Macros.h:
          LynxOS no longer needs special macro handling.

Fri Sep  3 19:13:24 2004  Olli Savia  <ops@iki.fi>

        * apps/drwho/File_Manager.cpp:
          LynxOS 3.x needs explicit template instantiation.
